--- a/data/locales/en/LC_MESSAGES/tautulli.po
+++ b/data/locales/en/LC_MESSAGES/tautulli.po
@@ -1,44 +1,40 @@
-# Translations template for PROJECT.
-# Copyright (C) 2021 ORGANIZATION
-# This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-06-04 20:14-0700\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2021-06-05 01:01+0200\n"
+"PO-Revision-Date: 2021-06-04 23:06+0000\n"
+"Last-Translator: JonnyWong16 <9099342+JonnyWong16@users.noreply.github.com>\n"
+"Language-Team: English <https://hosted.weblate.org/projects/tautulli/tautulli/"
+"en/>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.0\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #: ../../data/interfaces/default/base.html:107
 #: ../../data/interfaces/default/base.html:109
 msgid "base.nav.libraries"
-msgstr ""
+msgstr "Libraries"
 
 #: ../../data/interfaces/default/base.html:112
 #: ../../data/interfaces/default/base.html:114
 msgid "base.nav.users"
-msgstr ""
+msgstr "Users"
 
 #: ../../data/interfaces/default/base.html:117
 #: ../../data/interfaces/default/base.html:119
 msgid "base.nav.history"
-msgstr ""
+msgstr "History"
 
 #: ../../data/interfaces/default/base.html:122
 #: ../../data/interfaces/default/base.html:124
 msgid "base.nav.graphs"
-msgstr ""
+msgstr "Graphs"
 
 #: ../../data/interfaces/default/base.html:127
 #: ../../data/interfaces/default/base.html:129
 msgid "base.nav.synced_items"
-msgstr ""
-
+msgstr "Synced Items"
